--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>i-sense flu v3</title>
+    <title>Flu Detector (i-sense flu)</title>
   </head>
   <body>
     <noscript>
